<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/Leave"
        android:layout_marginBottom="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toNeed"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold"
            android:textSize="18pt"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOnlyCome"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold|italic"
            android:textSize="15pt"
            android:text="@string/onlyCome"
            android:backgroundTint="@color/green"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnComeWith"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold|italic"
            android:textSize="15pt"
            android:text="@string/ComeWith"
            android:backgroundTint="@color/orange"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYesNo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold|italic"
            android:textSize="15pt"
            android:text="@string/YesNo"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEmergency"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold|italic"
            android:textSize="15pt"
            android:backgroundTint="@color/red"
            android:text="@string/Emergency"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Leave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLeaveOut"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold|italic"
            android:textSize="15pt"
            android:backgroundTint="@color/gray"
            android:text="@string/leaveOut"/>
    </LinearLayout>

</RelativeLayout>