<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/nameRoom"
        app:tint="@color/black"
        android:textSize="15pt"
        android:fontFamily="casual"
        android:textColor="@color/purple_500"/>
    <EditText
        android:textAlignment="center"
        android:id="@+id/nameSala"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"
        android:hint="Escriba aquí"
        android:fontFamily="casual"
        android:textSize="12pt"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/purple_200"/>


    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passRoom"
        app:tint="@color/black"
        android:textSize="15pt"
        android:fontFamily="casual"
        android:textColor="@color/purple_500"/>
    <EditText
        android:textAlignment="center"
        android:id="@+id/passSala"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:hint="Escriba aquí"
        android:fontFamily="casual"
        android:textSize="12pt"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/purple_200"/>






    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/who"
        app:tint="@color/black"
        android:textSize="15pt"
        android:fontFamily="casual"
        android:textColor="@color/purple_500"/>
    <EditText
        android:textAlignment="center"
        android:id="@+id/nombre"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="4dp"
        android:hint="Escriba aquí"
        android:fontFamily="casual"
        android:textSize="12pt"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/purple_200"/>
</LinearLayout>